# GPy

./: .appveyor_twine_upload.bat  .coveragerc  .flake8  .gitchangelog.rc  .gitignore  .pylintrc  .readthedocs.yml  .travis.yml  AUTHORS.txt  CHANGELOG.md  KALMAN_TODO  LICENSE.txt  MANIFEST.in  README.md  README.rst  Untitled0.ipynb  appveyor.yml  changelog0.6  changelog06.md  codecov.yml  grid_parameters.py  index.html  mpi_test__.py  params.json  pyproject.toml  setup.cfg  setup.py  test6.py  travis_tests.py
.github/workflows/: actions.yml  deploy.yml  test-and-deploy.yml  test.yml
GPy/: FAQ.txt  Youter.txt  __init__.py  __version__.py  coding_style_guide.txt  defaults.cfg  gpy_config.cfg  installation.cfg  log_like_grad.txt  models.py  notes.txt  version
GPy/_models/: bayesian_gplvm.py  gp_regression.py  gplvm.py  gradient_checker.py  sparse_gplvm.py  svigp_regression.py
GPy/core/: FITC.py  GP.py  __init__.py  domains.py  fitc.py  gp.py  gp_base.py  gp_grid.py  gp_ssm.py  index_operations.py  mapping.py  model.py  parameter.py  parameterised.py  parameterized.py  priors.py  probabilistic_model.py  sparse_GP.py  sparse_gp.py  sparse_gp_mpi.py  svgp.py  svigp.py  symbolic.py  transformations.py  variational.py  verbose_optimization.py
GPy/examples/: BGPLVM_demo.py  GPLVM_demo.py  GP_regression_demo.py  GP_regression_kern_demo.py  __init__.py  classification.py  coreg_example.py  dimensionality_reduction.py  ep_fix.py  fitc_class_01.py  fitc_class_02.py  fitc_regr_01.py  laplace_approximations.py  non_gaussian.py  oil_flow_demo.py  poisson.py  regression.py  sparse_GPLVM_demo.py  sparse_GP_regression_demo.py  sparse_ep_fix.py  state_space.py  stochastic.py  tuto_GP_regression.py  tuto_kernel_overview.py  tutorials.py  uncertain_input_GP_regression_demo.py  uncollapsed_GP_demo.py  unsupervised.py  warped_GP_demo.py
GPy/inference/: EP.py  Expectation_Propagation.py  SCG.py  SGD.py  __init__.py  conjugate_gradient_descent.py  ep.py  gradient_descent_update_rules.py  likelihoods.py  optimization.py  samplers.py  scg.py  sgd.py
GPy/kern/: Brownian.py  DelayedDecorator.py  Matern32.py  Matern52.py  __init__.py  __init__.py~  __init__old.py  bias.py  constructors.py  coregionalise.py  exponential.py  finite_dimensional.py  fixed.py  independent_outputs.py  kern.py  kernpart.py  linear.py  linear_ARD.py  matlab_construct.py  periodic_Matern32.py  periodic_Matern52.py  periodic_exponential.py  prod.py  prod_orthogonal.py  product.py  product_orthogonal.py  rational_quadratic.py  ratquad.py  rbf-testing.py  rbf.py  rbf_ARD.py  rbfcos.py  spline.py  symmetric.py  sympy_helpers.cpp  sympy_helpers.h  sympykern.py  white.py
GPy/likelihoods/: EP.py  Gaussian.py  Laplace.py  __init__.py  bernoulli.py  binomial.py  binomial_likelihood.py  constructors.py  ep.py  ep_mixed_noise.py  exponential.py  gamma.py  gaussian.py  gaussian_mixed_noise.py  laplace.py  likelihood.py  likelihood_functions.py  link_functions.py  loggaussian.py  loglogistic.py  mixed_noise.py  multioutput_likelihood.py  negative_binomial.py  negative_binomial.py~  noise_model_constructors.py  null_category.py  ordinal.py  poisson.py  poisson_likelihood.py  skew_exponential.py  skew_normal.py  sstudent_t.py  student_t.py  symbolic.py  symbolic.py~  symlikelihood.py~  weibull.py
GPy/mappings/: __init__.py  additive.py  compound.py  constant.py  identity.py  kernel.py  kernel_mapping.py  linear.py  linear_mapping.py  mlp.py  mlpext.py  piecewise_linear.py  symbolic.py  symbolic.py~
GPy/models/: BGPLVM.py  Bayesian_GPLVM.py  FITC.py  GP.py  GPLVM.py  GP_EP.py  GP_EP2.py  GP_classification.py  GP_regression.py  __init__.py  bayesian_gplvm.py  bayesian_gplvm_minibatch.py  bcgplvm.py  dpgplvm.py  fitc.py  fitc_classification.py  generalized_FITC.py  generalized_fitc.py  gmm_bayesian_gplvm.py  gp_classification.py  gp_coregionalized_regression.py  gp_grid_regression.py  gp_heteroscedastic_regression.py  gp_kronecker_gaussian_regression.py  gp_multiout_regression.py  gp_multiout_regression_md.py  gp_multioutput.py  gp_multioutput_regression.py  gp_offset_regression.py  gp_regression.py  gp_ssm_regression.py  gp_var_gauss.py  gplvm.py  gradient_checker.py  ibp_lfm.py  input_warped_gp.py  mrd.py  multioutput_gp.py  new_gp_heteroscedastic_regression.py  one_vs_all_classification.py  (+33 more)
GPy/models_modules/: __init__.py  bayesian_gplvm.py  bcgplvm.py  fitc_classification.py  gplvm.py  mrd.py  scaled_gplvm.py  sparse_gp_classification.py  sparse_gplvm.py
GPy/old_tests/: bcgplvm_tests.py  gp_transformation_tests.py  gplvm_tests.py  mapping_tests.py  psi_stat_gradient_tests.py  sparse_gplvm_tests.py
GPy/plotting/: Tango.py  __init__.py  abstract_plotting_library.py
GPy/testing/: __init__.py  b-gplvm-save.npz  bcgplvm_tests.py  bgplvm_minibatch_tests.py  bgplvm_tests.py  cacher_tests.py  ccd_test.py  ccd_test_1.py  cgd_tests.py  cox_tests.py  cython_tests.py  ep_likelihood_tests.py  examples_tests.py  fitc.py  gp_tests.py  gp_transformation_tests.py  gplvm_tests.py  gpy_kernels_state_space_tests.py  grid_tests.py  (+68 more)
benchmarks/: boston_housing.py
doc/: GPy.core.parameterization.rst  GPy.core.rst  GPy.examples.rst  GPy.inference.latent_function_inference.rst  GPy.inference.mcmc.rst  GPy.inference.optimization.rst  GPy.inference.rst  GPy.kern._src.psi_comp.rst  GPy.kern._src.rst  GPy.kern.parts.rst  GPy.kern.rst  GPy.likelihoods.noise_models.rst  GPy.likelihoods.rst  GPy.mappings.rst  GPy.models.rst  GPy.models_modules.rst  GPy.plotting.matplot_dep.latent_space_visualizations.rst  GPy.plotting.matplot_dep.rst  GPy.rst  GPy.testing.rst  GPy.util.latent_space_visualizations.controllers.rst  GPy.util.latent_space_visualizations.rst  GPy.util.rst  Makefile  conf.py  doc-requirements.txt  index.rst  installation.rst  kernel_implementation.rst  log.txt  make.bat  mock.py  tuto_GP_regression.rst  tuto_creating_new_kernels.rst  tuto_creating_new_models.rst  tuto_interacting_with_models.rst  tuto_kernel_overview.rst
ib_tests/: test_regression.py  test_transformation_of_pdf.py  test_transformation_plot.py
stylesheets/: styles.css
(+809 files in other folders)
