[metadata]
name = GPy
author_email = gpy.authors@gmail.com
license = BSD-3-Clause
description = The Gaussian Process Toolbox
keywords =
    machine-learning
    gaussian-processes
    kernels
url = https://sheffieldml.github.io/GPy/
download_url = https://github.com/SheffieldML/GPy/archive/refs/heads/devel.zip
long_description = file: README.rst
classifiers =
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Framework :: IPython
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Source Code = https://github.com/SheffieldML/GPy
    Bug Tracker = https://github.com/SheffieldML/GPy/issues

[options]
package_dir =
    GPy = GPy
py_modules = GPy.__init__
packages =
    GPy
    GPy.core
    GPy.core.parameterization
    GPy.kern
    GPy.kern.src
    GPy.kern.src.psi_comp
    GPy.models
    GPy.inference
    GPy.inference.optimization
    GPy.inference.mcmc
    GPy.inference.latent_function_inference
    GPy.likelihoods
    GPy.mappings
    GPy.examples
    GPy.testing
    GPy.util
    GPy.plotting
    GPy.plotting.gpy_plot
    GPy.plotting.matplot_dep
    GPy.plotting.matplot_dep.controllers
    GPy.plotting.plotly_dep
setup_requires = numpy>=1.7
install_requires =
    numpy>=1.7
    six
    paramz>=0.9.0
    cython>=0.29
    scipy>=1.3.0; python_version >= '3.6'
    scipy>=1.3.0,<1.5.0; python_version < '3.6'
include_package_data = True
test_suite = GPy.testing

[options.extras_require]
docs = sphinx
optional = mpi4py; ipython>=4.0.0
# matplotlib Version see github issue #955
plotting = 
    matplotlib==3.3.4; python_version >= '3.6'
    matplotlib==3.0.0; python_version < '3.6'
    plotly >= 1.8.6
notebook =
    jupyter_client >= 4.0.6
    ipywidgets >= 4.0.3
    ipykernel >= 4.1.0
    notebook >= 4.0.5

[bumpversion]
current_version = 1.9.9
tag = True
commit = True

[bumpversion:file:GPy/__version__.py]

[bumpversion:file:appveyor.yml]

[upload_docs]
upload-dir = doc/build/html
