[options]
test_suite = GPy.testing

[options.extras_require]
docs = sphinx
optional = mpi4py; ipython>=4.0.0
# matplotlib Version see github issue #955
plotting = 
    matplotlib==3.3.4; python_version >= '3.6'
    matplotlib==3.0.0; python_version < '3.6'
    plotly >= 1.8.6
notebook =
    jupyter_client >= 4.0.6
    ipywidgets >= 4.0.3
    ipykernel >= 4.1.0
    notebook >= 4.0.5

[bumpversion]
current_version = 1.9.9
tag = True
commit = True

[bumpversion:file:GPy/__version__.py]

[bumpversion:file:appveyor.yml]

[upload_docs]
upload-dir = doc/build/html
